cfn_benchmark/cfn_templates/govuk-one-login__ipv-stubs/di-ipv-orchestrator-stub/deploy/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Transform: AWS::Serverless-2016-10-31
Globals:
  Function:
    Timeout: 30

Description: >-
  This creates the necessary components to deploy IPV Orch Stub onto ECS
  Fargate within the dev platform VPC and private subnets (provided as parameters)
Parameters:
  Environment:
    Description: The name of the environment to deploy to.
    Type: String
    AllowedPattern: ((production)|(build)|(dev.*))
  ImageTag:
    Description: The tag of orch-stub image to deploy in the task definition.
    Type: String
    Default: "none"
  VpcStackName:
    Description: >
      The name of the stack that defines the VPC in which this container will
      run.
    Type: String
  PermissionsBoundary:
    Description: "The ARN of the permissions boundary to apply when creating IAM roles"
    Type: String
    Default: "none"

Conditions:
  IsDevelopment: !Not
    - !Or
      - !Equals [!Ref Environment, "build"]
      - !Equals [!Ref Environment, "production"]
  IsNotDevelopment: !Not [!Condition IsDevelopment]
  IsProduction: !Equals [!Ref Environment, production]
  IsNonProd: !Not
    - !Or
      - !Condition IsDevelopment
      - !Condition IsProduction
  UsePermissionsBoundary:
    Fn::Not:
      - Fn::Equals:
          - !Ref PermissionsBoundary
          - "none"

# Mapping using aws account id - keeps things simple
# if this is built out differently.
Mappings:
  EnvironmentConfiguration:
    "130355686670": # Development
      fargateCPUsize: "256"
      fargateRAMsize: "512"
      desiredTaskCount: 1
      environment: dev
      platform: core
      dynatraceSecretArn: arn:aws:secretsmanager:eu-west-2:216552277552:secret:DynatraceNonProductionVariables #pragma: allowlist secret
    "826978934233": #Core Stubs Build
      fargateCPUsize: "256"
      fargateRAMsize: "1024"
      desiredTaskCount: 1
      environment: build
      platform: core-stubs
      dynatraceSecretArn: arn:aws:secretsmanager:eu-west-2:216552277552:secret:DynatraceNonProductionVariables #pragma: allowlist secret
    "616199614141": #Stubs Build
      fargateCPUsize: "512"
      fargateRAMsize: "1024"
      desiredTaskCount: 1
      environment: build
      platform: stubs
      dynatraceSecretArn: arn:aws:secretsmanager:eu-west-2:216552277552:secret:DynatraceNonProductionVariables #pragma: allowlist secret
    "388905755587": #Stubs Prod
      fargateCPUsize: "1024"
      fargateRAMsize: "2048"
      desiredTaskCount: 4
      environment: production
      platform: stubs
      dynatraceSecretArn: arn:aws:secretsmanager:eu-west-2:216552277552:secret:DynatraceNonProductionVariables #pragma: allowlist secret
  SecurityGroups:
    PrefixListIds:
      dynamodb: "pl-b3a742da"
      s3: "pl-7ca54015"

Resources:
  # ssl cert
  OrchStubSSLCert:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !If
        - IsNonProd
        - !Sub "orch.${Environment}.stubs.account.gov.uk"
        - orch.stubs.account.gov.uk
      DomainValidationOptions:
        - DomainName: !If
            - IsNonProd
            - !Sub "orch.${Environment}.stubs.account.gov.uk"
            - orch.stubs.account.gov.uk
          HostedZoneId: !If
            - IsNonProd
            - !ImportValue BuildPublicHostedZoneId
            - !ImportValue RootPublicHostedZoneId
      ValidationMethod: DNS

  # api domain entries / mapping
  OrchStubApiDomain:
    Type: AWS::ApiGatewayV2::DomainName
    Properties:
      DomainName: !If
        - IsNonProd
        - !Sub "orch.${Environment}.stubs.account.gov.uk"
        - orch.stubs.account.gov.uk
      DomainNameConfigurations:
        - CertificateArn: !Ref OrchStubSSLCert
          EndpointType: REGIONAL
          SecurityPolicy: TLS_1_2

  OrchStubApiMapping:
    Type: AWS::ApiGatewayV2::ApiMapping
    Properties:
      DomainName: !If
        - IsNonProd
        - !Sub "orch.${Environment}.stubs.account.gov.uk"
        - orch.stubs.account.gov.uk
      ApiId: !Ref ApiGwHttpEndpoint
      Stage: "$default"
    DependsOn:
      - OrchStubApiDomain
      - APIStageDefault

  # dns record
  OrchStubDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      Type: A
      Name: !If
        - IsNonProd
        - !Sub "orch.${Environment}.stubs.account.gov.uk"
        - orch.stubs.account.gov.uk
      HostedZoneId: !If
        - IsNonProd
        - !ImportValue BuildPublicHostedZoneId
        - !ImportValue RootPublicHostedZoneId
      AliasTarget:
        DNSName: !GetAtt OrchStubApiDomain.RegionalDomainName
        HostedZoneId: !GetAtt OrchStubApiDomain.RegionalHostedZoneId

  # Security Groups for the ECS service and load balancer
  LoadBalancerSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        Orch Stub LoadBalancer Security Group
      SecurityGroupIngress:
        - CidrIp:
            Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
          Description: Allow vpc cidr ingress to port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId

  LoadBalancerSGEgressToECSSecurityGroup:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      GroupId: !GetAtt LoadBalancerSG.GroupId
      Description: >-
        Egress between the Orch Stub load balancer and
        the Orch Stub ECS security group
      DestinationSecurityGroupId: !GetAtt OrchStubECSSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080

  OrchStubECSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        Orch Stub ECS Security Group outbound permissions ruleset
      SecurityGroupEgress:
        - DestinationPrefixListId:
            !FindInMap [SecurityGroups, PrefixListIds, dynamodb]
          Description: Allow outbound traffic to dynamodb vpc endpoint
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - DestinationPrefixListId:
            !FindInMap [SecurityGroups, PrefixListIds, s3]
          Description: Allow outbound traffic to s3 vpc endpoint
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - DestinationSecurityGroupId: !If
            - IsNotDevelopment
            - Fn::ImportValue: !Sub ${VpcStackName}-AWSServicesEndpointSecurityGroupId
            - !ImportValue InterfaceVpcEndpointSecurityGroupId
          Description: Allow outbound traffic to AWS Services vpc endpoint security group
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp:
            Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
          Description: Allow outbound traffic from vpc cidr to port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: Allow egress HTTPS traffic to any from port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      SecurityGroupIngress:
        - CidrIp:
            Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
          Description: Allow inbound traffic from vpc cidr to port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId

  OrchStubECSSecurityGroupIngressFromLoadBalancer:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      IpProtocol: tcp
      Description: >-
        Orch Stub ECS permits inbound from the Orch Stub
        load balancer.
      FromPort: 8080
      ToPort: 8080
      GroupId: !GetAtt OrchStubECSSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt LoadBalancerSG.GroupId

  # http api gateway - which does nothing other than route everything to LB
  ApiGwHttpEndpoint:
    Type: "AWS::ApiGatewayV2::Api"
    Properties:
      Name: !Sub ${AWS::StackName}-orch-api-gw
      ProtocolType: HTTP

  ApiGwHttpEndpointIntegration:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref ApiGwHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub "${VpcStackName}-VpcLinkId"
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref LoadBalancerListener
      PayloadFormatVersion: "1.0"

  APIGWRoute:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref ApiGwHttpEndpoint
      RouteKey: "ANY /{proxy+}"
      Target: !Join
        - /
        - - integrations
          - !Ref ApiGwHttpEndpointIntegration

  APIStageDefault:
    Type: "AWS::ApiGatewayV2::Stage"
    Properties:
      ApiId: !Ref ApiGwHttpEndpoint
      StageName: $default
      AutoDeploy: true
      AccessLogSettings:
        DestinationArn: !GetAtt APIGWAccessLogsGroup.Arn
        Format: >-
          {
          "requestId":"$context.requestId",
          "ip": "$context.identity.sourceIp",
          "requestTime":"$context.requestTime",
          "httpMethod":"$context.httpMethod",
          "path": "$context.path",
          "routeKey":"$context.routeKey",
          "status":"$context.status",
          "protocol":"$context.protocol",
          "responseLength":"$context.responseLength",
          "responseLatency":"$context.responseLatency"
          }

  APIGWAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-orch-api-gw-accesslogs
      RetentionInDays: 14
      KmsKeyId: !GetAtt LoggingKmsKey.Arn

  # Private Application Load Balancer
  LoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Scheme: internal
      SecurityGroups:
        - !GetAtt LoadBalancerSG.GroupId
      Subnets:
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdA
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdB
      Type: application
      #checkov:skip=CKV_AWS_91:ALB access logging is disabled in developer environments to make them easier to manage.
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
        - !If
          - IsNotDevelopment
          - Key: access_logs.s3.enabled
            Value: true
          - !Ref AWS::NoValue
        - !If
          - IsNotDevelopment
          - Key: access_logs.s3.bucket
            Value: !Sub "ipv-stubs-${Environment}-access-logs"
          - !Ref AWS::NoValue
        - !If
          - IsNotDevelopment
          - Key: access_logs.s3.prefix
            Value: core-stubs
          - !Ref AWS::NoValue
        - !If
          - IsNotDevelopment
          - Key: deletion_protection.enabled
            Value: false
          - !Ref AWS::NoValue
      Tags:
        - Key: FMSRegionalPolicy
          Value: false
        - Key: CustomPolicy
          Value: true

  LoadBalancerListenerTargetGroupECS:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: TRUE
      HealthCheckProtocol: HTTP
      Matcher:
        # If basic auth is on then the site will return a 401
        HttpCode: "200,401"
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      # checkov:skip=CKV_AWS_2:Certificate generation must be resolved before the listener can use HTTPS.
      # checkov:skip=CKV_AWS_103:The load balancer cannot use TLS v1.2 until HTTPS is enabled
      LoadBalancerArn: !Ref LoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECS
          Type: forward

  # ECS cluster, service, task and autoscaling definition
  OrchStubCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterSettings:
        - Name: containerInsights
          Value: enabled

  OrchStubService:
    Type: "AWS::ECS::Service"
    Properties:
      Cluster: !Ref OrchStubCluster
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
        DeploymentCircuitBreaker:
          Enable: true
          Rollback: true
      DeploymentController:
        Type: ECS
      DesiredCount: !FindInMap
        - EnvironmentConfiguration
        - !Ref AWS::AccountId
        - desiredTaskCount
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: app
          ContainerPort: 8080
          TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECS
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt OrchStubECSSecurityGroup.GroupId
          Subnets:
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
      TaskDefinition: !Ref ECSServiceTaskDefinition
    DependsOn:
      - LoadBalancerListener

  OrchStubAutoScalingTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MaxCapacity: 12
      MinCapacity: !FindInMap
        - EnvironmentConfiguration
        - !Ref AWS::AccountId
        - desiredTaskCount
      ResourceId: !Join
        - "/"
        - - "service"
          - !Ref OrchStubCluster
          - !GetAtt OrchStubService.Name
      RoleARN: !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs

  OrchStubAutoScalingPolicy:
    DependsOn: OrchStubAutoScalingTarget
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: OrchStubAutoScalingPolicy
      PolicyType: TargetTrackingScaling
      ResourceId: !Join
        - "/"
        - - "service"
          - !Ref OrchStubCluster
          - !GetAtt OrchStubService.Name
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: 30
        ScaleInCooldown: 300
        ScaleOutCooldown: 30

  ECSAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}-OrchStub-ECS
      RetentionInDays: 14
      KmsKeyId: !GetAtt LoggingKmsKey.Arn

  ECSServiceTaskDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: !If [
              IsNotDevelopment,
              CONTAINER-IMAGE-PLACEHOLDER,
              !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/orch-stub-development:${ImageTag}",
            ] # Uses build account and ECR when not in development.
          Name: app
          Environment:
            - Name: JBP_CONFIG_OPEN_JDK_JRE
              Value: '{{resolve:ssm:/stubs/orch/env/JBP_CONFIG_OPEN_JDK_JRE}}'
            - Name: JAVA_OPTS
              Value: '{{resolve:ssm:/stubs/orch/env/JAVA_OPTS}}'
            - Name: ORCHESTRATOR_CLIENT_ID
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_CLIENT_ID}}'
            - Name: ORCHESTRATOR_REDIRECT_URL
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_REDIRECT_URL}}'
            - Name: ORCHESTRATOR_CLIENT_JWT_TTL
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_CLIENT_JWT_TTL}}'
            - Name: ORCHESTRATOR_PORT
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_PORT}}'
            - Name: ORCHESTRATOR_SIGNING_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_SIGNING_JWK}}'
            - Name: AUTH_CLIENT_ID
              Value: '{{resolve:ssm:/stubs/orch/env/AUTH_CLIENT_ID}}'
            - Name: AUTH_SIGNING_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/AUTH_SIGNING_JWK}}'
            - Name: ORCHESTRATOR_DEFAULT_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_DEFAULT_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: ORCHESTRATOR_DEV01_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_DEV01_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: ORCHESTRATOR_DEV02_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_DEV02_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: ORCHESTRATOR_BUILD_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_BUILD_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: ORCHESTRATOR_STAGING_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_STAGING_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: ORCHESTRATOR_INTEGRATION_JAR_ENCRYPTION_PUBLIC_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_INTEGRATION_JAR_ENCRYPTION_PUBLIC_JWK}}'
            - Name: IPV_BACKCHANNEL_ENDPOINT
              Value: '{{resolve:ssm:/stubs/orch/env/IPV_BACKCHANNEL_ENDPOINT}}'
            - Name: IPV_ENDPOINT
              Value: '{{resolve:ssm:/stubs/orch/env/IPV_ENDPOINT}}'
            - Name: IPV_CORE_AUDIENCE
              Value: '{{resolve:ssm:/stubs/orch/env/IPV_CORE_AUDIENCE}}'
            - Name: ORCHESTRATOR_BASIC_AUTH_ENABLE
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_BASIC_AUTH_ENABLE}}'
            - Name: ORCHESTRATOR_BASIC_AUTH_USERNAME
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_BASIC_AUTH_USERNAME}}'
            - Name: ORCHESTRATOR_BASIC_AUTH_PASSWORD
              Value: '{{resolve:ssm:/stubs/orch/env/ORCHESTRATOR_BASIC_AUTH_PASSWORD}}'
            - Name: EVCS_ACCESS_TOKEN_ENDPOINT
              Value: '{{resolve:ssm:/stubs/orch/env/EVCS_ACCESS_TOKEN_ENDPOINT}}'
            - Name: EVCS_ACCESS_TOKEN_TTL
              Value: '{{resolve:ssm:/stubs/orch/env/EVCS_ACCESS_TOKEN_TTL}}'
            - Name: EVCS_ACCESS_TOKEN_SIGNING_JWK
              Value: '{{resolve:ssm:/stubs/orch/env/EVCS_ACCESS_TOKEN_SIGNING_JWK}}'
          Secrets:
            - Name: DT_TENANT
              ValueFrom: !Join
                - ""
                - - !FindInMap [
                      EnvironmentConfiguration,
                      !Ref AWS::AccountId,
                      dynatraceSecretArn,
                    ]
                  - ":DT_TENANT::"
            - Name: DT_TENANTTOKEN
              ValueFrom: !Join
                - ""
                - - !FindInMap [
                      EnvironmentConfiguration,
                      !Ref AWS::AccountId,
                      dynatraceSecretArn,
                    ]
                  - ":DT_TENANTTOKEN::"
            - Name: DT_CONNECTION_POINT
              ValueFrom: !Join
                - ""
                - - !FindInMap [
                      EnvironmentConfiguration,
                      !Ref AWS::AccountId,
                      dynatraceSecretArn,
                    ]
                  - ":DT_CONNECTION_POINT::"
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ECSAccessLogsGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: !Sub orch-stub-${Environment}
      Cpu:
        !FindInMap [
          EnvironmentConfiguration,
          !Ref AWS::AccountId,
          fargateCPUsize,
        ]
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      Memory:
        !FindInMap [
          EnvironmentConfiguration,
          !Ref AWS::AccountId,
          fargateRAMsize,
        ]
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: "ARM64"
      TaskRoleArn: !GetAtt ECSTaskRole.Arn

  ECSTaskExecutionRole:
    # checkov:skip=CKV_SECRET_6:The "secret" is not a secret #pragma: allowlist secret
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      Policies:
        - PolicyName: PullOrchStubImage
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ecr:BatchGetImage"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:GetAuthorizationToken"
                Resource:
                  - "*"
              - Effect: Allow
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource:
                  - !GetAtt "ECSAccessLogsGroup.Arn"
                  - !Sub "${ECSAccessLogsGroup.Arn}:*"
        - PolicyName: OrchStubGetSecrets
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "secretsmanager:GetSecretValue" #pragma: allowlist secret
                Resource:
                  - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/stubs/orch/*"
        - PolicyName: GetDynatraceSecret
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: secretsmanager:GetSecretValue #pragma:allowlist secret
                Resource: arn:aws:secretsmanager:eu-west-2:216552277552:secret:* #pragma:allowlist secret
              - Effect: Allow
                Action: secretsmanager:ListSecrets #pragma:allowlist secret
                Resource: arn:aws:secretsmanager:eu-west-2:216552277552:secret:* #pragma:allowlist secret
              - Effect: Allow
                Action: kms:Decrypt
                Resource: arn:aws:kms:eu-west-2:216552277552:key/*
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue
    Metadata:
      checkov:
        skip:
          - id: "CKV_SECRET_6" #pragma: allowlist secret
            comment: "This is not sensitive"

  ECSTaskRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      Policies:
        - PolicyName: OrchStubGetSecrets
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "secretsmanager:GetSecretValue" #pragma: allowlist secret
                Resource:
                  - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/orch/core/*" #pragma: allowlist secret
        - PolicyName: GetDynatraceSecret
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: secretsmanager:GetSecretValue #pragma: allowlist secret
                Resource: arn:aws:secretsmanager:eu-west-2:216552277552:secret:* #pragma: allowlist secret
              - Effect: Allow
                Action: secretsmanager:ListSecrets #pragma: allowlist secret
                Resource: arn:aws:secretsmanager:eu-west-2:216552277552:secret:* #pragma: allowlist secret
              - Effect: Allow
                Action: kms:Decrypt
                Resource: arn:aws:kms:eu-west-2:216552277552:key/*
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue

  # kms key for logging
  LoggingKmsKey:
    Type: AWS::KMS::Key
    Properties:
      EnableKeyRotation: true
      KeyPolicy:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
            Action:
              - kms:*
            Resource: "*"
          - Effect: Allow
            Principal:
              Service: !Sub "logs.${AWS::Region}.amazonaws.com"
            Action:
              - "kms:Encrypt*"
              - "kms:Decrypt*"
              - "kms:ReEncrypt*"
              - "kms:GenerateDataKey*"
              - "kms:Describe*"
            Resource: "*"
            Condition:
              ArnLike:
                "kms:EncryptionContext:aws:logs:arn": !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*"

Outputs:
  OrchStubEnvironment:
    Description: Orch Stub Environment
    Value: !Ref Environment
  OrchStubDomain:
    Description: Orch Stub DNS Domain
    Value: !Ref OrchStubDNSRecord
  OrchStubApiDomain:
    Description: Orch Stub API Domain
    Value: !Ref OrchStubApiDomain
